--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
   shared_preferences: ^2.2.2
-
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+    mockito: ^5.0.0
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
