--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,38 @@ jobs:
           channel: "stable"
       - run: flutter pub get
       - run: flutter analyze
+      - run: flutter test
+
+  build_ios:
+    name: Build Flutter (İOS)
+    #needs: [flutter_test]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4.0.0
+        with:
+          java-version: "12.x"
+          distribution: adopt
+      - uses: subosito/flutter-action@v2.12.0
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build ios --no-codesign
+
+  build_android:
+    name: Build Flutter (android)
+    #needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.1.1
+      - uses: actions/setup-java@v4.0.0
+        with:
+          java-version: "12.x"
+          distribution: adopt
+      - uses: subosito/flutter-action@v2.12.0
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build android
