--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.19.0
   shared_preferences: ^2.2.2
- 
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
